test/functions/vass/proc-iter/error-void-nonvoid-returns-types-1.good
error-void-nonvoid-returns-types-1.chpl:2: error: Not all returns in this function return a value
