test/functions/vass/proc-iter/error-void-nonvoid-returns-types-1.chpl
var v : p11f();
proc p11f() type {
  if true then return; else return void;
}
